--- a/coffee_shop/Properties/Resources.resx
+++ b/coffee_shop/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="delete_sign_filled_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete_sign_filled_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IMG_0316" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_0316.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
